--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -38,13 +38,13 @@ body:
       label: Minecraft Loader
       multiple: false
       options:
-        - fabric
-        - forge
+        - Fabric
+        - Forge
 
   - type: input
     id: loader-version
     attributes:
-      label: Mod Version
+      label: Fabric/Forge Version
     validations:
       required: true
 
