--- a/build.gradle
+++ b/build.gradle
@@ -58,7 +58,7 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/PssbleTrngle/KnowMyName")
+            url = uri("https://maven.pkg.github.com/pssbletrngle/${project.archives_base_name}")
             credentials {
                 username = System.getenv("GITHUB_ACTOR")
                 password = System.getenv("GITHUB_TOKEN")
