--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ loader_version=0.14.6
 mod_version = 1.0.0
 maven_group = com.possible_triangle
 archives_base_name = knowmyname
+release_type=release
 
 # Dependencies
 fabric_version=0.53.0+1.18.2
