--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,8 @@ plugins {
 sourceCompatibility = JavaVersion.VERSION_17
 targetCompatibility = JavaVersion.VERSION_17
 
+def ENV = System.getenv()
+
 archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
@@ -57,9 +59,6 @@ jar {
 	}
 }
 
-
-def ENV = System.getenv()
-
 publishing {
     repositories {
         maven {
@@ -87,12 +86,15 @@ if (ENV.CURSEFORGE_TOKEN) curseforge {
         changelog = ENV.CHANGELOG
         changelogType = 'markdown'
         releaseType = project.release_type
+        mainArtifact(jar) {
+          displayName = version
+        }
     }
 }
 
 if (ENV.MODRINTH_TOKEN) modrinth {
     projectId = project.modrinth_project_id
-    versionNumber = project.mod_version
+    versionNumber = version
     changelog = ENV.CHANGELOG
     gameVersions = [project.minecraft_version]
     loaders = ["fabric"]
