--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,13 @@ jobs:
             ${{ runner.os }}-gradle-
       
       - run: chmod +x ./gradlew
+      
+      - name: Update mod version
+        uses: christian-draeger/write-properties@1.0.1
+        with:
+          path: 'gradle.properties'
+          property: 'mod_version'
+          value: ${{ github.event.release.tag_name }}
         
       - name: build
         run: ./gradlew build
