--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,6 @@ targetCompatibility = JavaVersion.VERSION_17
 
 def ENV = System.getenv()
 
-archivesBaseName = project.archives_base_name
 version = project.mod_version
 
 repositories {
@@ -54,7 +53,7 @@ java {
 
 jar {
 	from("LICENSE") {
-		rename { "${it}_${project.archives_base_name}"}
+		rename { "${it}_${project.mod_id}"}
 	}
 }
 
@@ -62,9 +61,8 @@ publishing {
     repositories {
         maven {
             name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/pssbletrngle/${project.archives_base_name}")
+            url = uri("https://maven.pkg.github.com/pssbletrngle/${project.mod_id}")
 	    version = version
-	    artifactId = project.archives_base_name
             credentials {
                 username = ENV.GITHUB_ACTOR
                 password = ENV.GITHUB_TOKEN
