--- a/gradle.properties
+++ b/gradle.properties
@@ -9,7 +9,7 @@ loader_version=0.14.6
 
 # Mod Properties
 mod_version=1.0.0
-archives_base_name=knowmyname
+mod_id=knowmyname
 release_type=release
 
 # Dependencies
