--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,34 +1,24 @@
-name: build
-on: [pull_request, push]
+name: Release
+on:
+  release:
+    types: [created]
 
 jobs:
   build:
-    strategy:
-      matrix:
-        java: [17]
-        os: [ubuntu-20.04, windows-2022]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-20.04
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
-        
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v3
+
+      - uses: actions/setup-java@v3
         with:
-          java-version: ${{ matrix.java }}
-          distribution: corretto
-          
-      - uses: actions/cache@v3
+          java-version: 17
+          distribution: temurin
+
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+
+      - name: Build
+        uses: gradle/gradle-build-action@v2
         with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      
-      - name: make gradle wrapper executable
-        if: ${{ runner.os != 'Windows' }}
-        run: chmod +x ./gradlew
-        
-      - name: build
-        run: ./gradlew build
+          arguments: build
