--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,49 +6,42 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    timeout-minutes: 20
     steps:
       - uses: actions/checkout@v3
-        
-      - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v3
+
+      - uses: actions/setup-java@v3
         with:
           java-version: 17
-          distribution: corretto
-          
-      - uses: actions/cache@v3
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-      
-      - run: chmod +x ./gradlew
-      
+          distribution: temurin
+
+      - name: Validate Gradle wrapper
+        uses: gradle/wrapper-validation-action@v1
+
       - name: Update mod version
         uses: christian-draeger/write-properties@1.0.1
         with:
           path: 'gradle.properties'
           property: 'mod_version'
           value: ${{ github.event.release.tag_name }}
-        
-      - name: build
-        run: ./gradlew build
-        
-      - name: upload to curseforge
-        run: ./gradlew curseforge
-        env:
-          CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
-          CHANGELOG: ${{ github.event.release.body }}
-          
-      - name: upload to modrinth
-        run: ./gradlew modrinth
-        env:
-          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
-          CHANGELOG: ${{ github.event.release.body }}
-          
-      - name: publish to github packages
-        run: ./gradlew publish
+
+      - name: Build and upload
+        uses: gradle/gradle-build-action@v2
+        with:
+          arguments: build curseforge modrinth publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          MODRINTH_TOKEN: ${{ secrets.MODRINTH_TOKEN }}
+          CURSEFORGE_TOKEN: ${{ secrets.CURSEFORGE_TOKEN }}
+          CHANGELOG: ${{ github.event.release.body }}
+
+      - name: Upload to github releases
+        if: ${{ github.event_name == 'release' }}
+        uses: actions/upload-release-asset@v1.0.1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: build/libs/KnowMyName-${{ github.event.release.tag_name }}.jar
+          asset_name: KnowMyName-${{ github.event.release.tag_name }}.jar
+          asset_content_type: application/java-archive
