--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.19
-yarn_mappings=1.19+build.1
-loader_version=0.14.6
+minecraft_version=1.19.4
+possible_minecraft_versions=1.19.3,1.19.4
+yarn_mappings=1.19.4+build.2
+loader_version=0.14.19
 
 # Mod Properties
 mod_version=0.0.0-dev
@@ -13,7 +14,7 @@ mod_id=knowmyname
 release_type=release
 
 # Dependencies
-fabric_version=0.55.1+1.19
+fabric_version=0.78.0+1.19.4
 
 curseforge_project_id=629673
 modrinth_project_id=PswX9vWM
