--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,21 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx3G
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.19.4
-possible_minecraft_versions=1.19.3,1.19.4
+mc_version=1.19.4
+fabric_loader_version=0.14.21
+fabric_api_version=0.86.0+1.19.4
 yarn_mappings=1.19.4+build.2
-loader_version=0.14.19
 
 # Mod Properties
 mod_version=0.0.0-dev
 mod_id=knowmyname
+mod_name=Know My Name!
+mod_author=possible_triangle
 release_type=release
+possible_minecraft_versions=1.19.3,1.19.4
+maven_group=com.possible-triangle
 
-# Dependencies
-fabric_version=0.78.0+1.19.4
-
+# Publishing
 curseforge_project_id=629673
 modrinth_project_id=PswX9vWM
+repository=pssbletrngle/knowmyname
