--- a/src/main/resources/knowmyname.mixins.json
+++ b/src/main/resources/knowmyname.mixins.json
@@ -3,10 +3,10 @@
   "minVersion": "0.8",
   "package": "com.possible_triangle.knowmyname.mixin",
   "compatibilityLevel": "JAVA_17",
-  "mixins": [
-    "BlockEntityMixin"
-  ],
+  "mixins": ["BlockEntityMixin"],
+  "client": [],
   "injectors": {
     "defaultRequire": 1
-  }
+  },
+  "refmap": "${mod_id}.mixins.refmap.json"
 }
