include continuity for testing

--- a/gradle.properties
+++ b/gradle.properties
@@ -15,6 +15,9 @@ release_type=release
 possible_minecraft_versions=1.19.3,1.19.4
 maven_group=com.possible-triangle
 
+# Dependencies
+continuity_version=3.0.0-beta.2+1.19.3
+
 # Publishing
 curseforge_project_id=629673
 modrinth_project_id=PswX9vWM
