--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx3G
 
-mc_version=1.19.4
+mc_version=1.19.2
 fabric_loader_version=0.14.21
-fabric_api_version=0.86.0+1.19.4
-yarn_mappings=1.19.4+build.2
+fabric_api_version=0.76.0+1.19.2
+yarn_mappings=1.19.2+build.28
 
 # Mod Properties
 mod_version=0.0.0-dev
@@ -12,11 +12,11 @@ mod_id=knowmyname
 mod_name=Know My Name!
 mod_author=possible_triangle
 release_type=release
-possible_minecraft_versions=1.19.3,1.19.4
+possible_minecraft_versions=1.19.2
 maven_group=com.possible-triangle
 
 # Dependencies
-continuity_version=3.0.0-beta.2+1.19.3
+continuity_version=2.0.2+1.19
 
 # Publishing
 curseforge_project_id=629673
